--- a/.github/workflows/daily-script.yml
+++ b/.github/workflows/daily-script.yml
@@ -1,7 +1,8 @@
 name: Daily Python Script
+
 on:
   schedule:
-    - cron: '00 00 * * *' # Runs daily at midnight UTC
+    - cron: '30 13 * * *' # Runs daily at 8:30 AM CDT (13:30 UTC)
   workflow_dispatch: # Allows manual triggering
 
 jobs:
@@ -15,12 +16,24 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.10' # Specify your preferred Python version
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install requests beautifulsoup4
 
     - name: Run Python script
-      run: python scripts/main.py
+      env:
+        NEWSAPI_KEY: ${{ secrets.NEWSAPI_KEY }}  # Pass the secret
+      run: python main.py
+
+    - name: Commit output file (if generated)
+      run: |
+        git config --global user.name 'Your Name'
+        git config --global user.email 'your.email@example.com'
+        git add news_output.txt
+        git commit -m "Update news output for $(date +'%Y-%m-%d')" || echo "No changes to commit"
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
