--- a/.github/workflows/daily-script.yml
+++ b/.github/workflows/daily-script.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Run Python script
       env:
         NEWSAPI_KEY: ${{ secrets.NEWSAPI_KEY }}
-      run: python main.py
+      run: python scripts/main.py  # Updated path to scripts/main.py
 
     - name: Commit history file
       run: |
